test/sema/typeck/operator/unary-neg-bool.out
error: unary operator `-` can not handle value of type `- Bool`.
--> unary-neg-bool.dora:1:17
 | fn f(a: Bool) { -a; }
                   ~~
 | 
1 error found.
