test/sema/typeck/operator/unary-neg-bool.dora
fn f(a: Bool) { -a; }
